--- a/jsfinalproject/server/package.json
+++ b/jsfinalproject/server/package.json
@@ -4,16 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "config": "^3.3.9",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
+    "password": "^0.1.1"
   }
 }
